--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "rust-lisp"
+name = "rustlisp"
 version = "0.1.0"
 authors = ["Benjamin Hetherington <b.w.hetherington@gmail.com>"]
 
 [dependencies]
 ansi_term = "0.9"
+clap = "2.31"
